--- a/src/components/Board/Port/Ship/Ship.module.css
+++ b/src/components/Board/Port/Ship/Ship.module.css
@@ -1,14 +1,25 @@
 .root {
   --size: 0;
 
+  cursor: grab;
   height: var(--cell-size);
   width: calc(var(--size) * var(--cell-size));
-  /*outline: 1px solid rgb(40, 40, 40);*/
-  /*outline-offset: -1px;*/
   flex-shrink: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  outline: 2px solid rgb(40, 40, 40);
+  outline-offset: -2px;
+  background: white;
+}
+
+.placed {
+  cursor: not-allowed;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  opacity: 30%;
 }
 
 .cell {
@@ -18,6 +29,4 @@
   align-items: center;
   height: var(--cell-size);
   width: var(--cell-size);
-  background-color: rgb(40, 40, 40);
-  color: royalblue;
 }
